--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Array frontend software engineer hiring tests.",
   "main": "index.html",
   "scripts": {
-    "test": "http-server -c-1"
+    "test": "http-server -c-1 && open 'http://127.0.0.1:8080'"
   },
   "repository": {
     "type": "git",
